# warning-agent

./: .env.example  LICENSE  README.md  pyproject.toml
app/: __init__.py  contracts_common.py  integration_evidence.py  live_local_primary_smoke.py  live_runtime_smoke.py  live_signoz_smoke.py  main.py  runtime_entry.py
configs/: collectors.yaml  delivery.yaml  escalation.yaml  evidence.yaml  feedback-governance.yaml  provider-boundary.yaml  reports.yaml  services.yaml  thresholds.yaml
data/: metadata.sqlite3
docs/: warning-agent-architecture-clarity-guardrails.md  warning-agent-architecture-clarity-target-map.md  warning-agent-architecture.md  warning-agent-contract-inventory.md  warning-agent-feedback-governance.md  warning-agent-integration-rollout-evidence.md  warning-agent-live-data-mvp-runbook.md  warning-agent-local-autopilot-clean-start-runbook.md  warning-agent-minimal-repo-skeleton.md  warning-agent-provider-boundary.md  warning-agent-schema-draft.md  warning-agent-signoz-first-runbook.md  warning-agent-warning-plane-production-stability-runbook.md
schemas/: alert-report-frontmatter.v1.json  incident-outcome.v1.json  incident-packet.v1.json  incident-packet.v2.json  investigation-result.v1.json  local-analyzer-decision.v1.json
scripts/: assemble_feedback_compare_corpus.py  run_cloud_fallback_benchmark.py  run_feedback_promotion_review.py  run_feedback_retrain_compare.py  run_live_runtime_smoke.py  run_live_signoz_alert_smoke.py  run_local_analyzer_benchmark.py  run_local_primary_benchmark.py  run_trained_scorer_scaffold.py  run_trust_benchmark_surface.py  (+1 more)
(+315 files in other folders)
